<resources>
	<string name="app_name">RxCurrency Converter</string>
	<string name="from">From</string>
	<string name="to">To</string>
	<string name="amount">Amount</string>
	<string name="convert">Convert</string>
	<string name="result">Result:</string>
	<string name="exchange_rate">Exchange rate:</string>
	<string name="last_updated">Last updated:</string>
	<string name="warning_message">Warning! Connection failed. Information might be outdated.</string>
	<string name="error_message">Error! Connection failed. No offline data found.</string>
	<string name="singleUnit">1.0</string>
	<string name="justNow">Just now</string>
	<string name="retry">Retry</string>
</resources>
