<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".views.activities.MainActivity">

	<ProgressBar
		android:id="@+id/progressBar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/scrollView"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.50"
		tools:visibility="visible" />


	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/textView_from"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="32dp"
				android:layout_marginTop="8dp"
				android:text="@string/from"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				app:layout_constraintHorizontal_chainStyle="spread"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<Spinner
				android:id="@+id/spinner_from"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="32dp"
				app:layout_constraintBottom_toBottomOf="@+id/textView_from"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toTopOf="@+id/textView_from" />

			<TextView
				android:id="@+id/textView_to"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:text="@string/to"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				app:layout_constraintStart_toStartOf="@+id/textView_amount"
				app:layout_constraintTop_toBottomOf="@+id/textView_amount" />

			<Spinner
				android:id="@+id/spinner_to"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toBottomOf="@+id/textView_to"
				app:layout_constraintEnd_toEndOf="@+id/editText_amount"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toTopOf="@+id/textView_to" />

			<TextView
				android:id="@+id/textView_amount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"

				android:text="@string/amount"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				app:layout_constraintStart_toStartOf="@+id/textView_from"
				app:layout_constraintTop_toBottomOf="@+id/textView_from" />

			<EditText
				android:id="@+id/editText_amount"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/singleUnit"
				android:inputType="numberDecimal"
				android:textAlignment="center"
				app:layout_constraintBottom_toBottomOf="@+id/textView_amount"
				app:layout_constraintEnd_toEndOf="@+id/spinner_from"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				app:layout_constraintTop_toTopOf="@+id/textView_amount" />

			<Button
				android:id="@+id/button_convert"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="32dp"
				android:layout_marginTop="24dp"
				android:layout_marginEnd="32dp"
				android:text="@string/convert"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView_to" />

			<TextView
				android:id="@+id/textView_result"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:text="@string/result"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				android:visibility="gone"
				app:layout_constraintStart_toStartOf="@+id/button_convert"
				app:layout_constraintTop_toBottomOf="@+id/button_convert"
				tools:visibility="visible" />

			<TextView
				android:id="@+id/textView_result_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				app:layout_constraintStart_toStartOf="@+id/textView_result"
				app:layout_constraintTop_toBottomOf="@+id/textView_result"
				tools:text="200 CAD = 3711 UAH" />

			<TextView
				android:id="@+id/textView_exchange_rate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:text="@string/exchange_rate"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				android:visibility="gone"
				app:layout_constraintStart_toStartOf="@+id/textView_result"
				app:layout_constraintTop_toBottomOf="@+id/textView_result_value"
				tools:visibility="visible" />

			<TextView
				android:id="@+id/textView_exchange_rate_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				app:layout_constraintStart_toStartOf="@+id/textView_exchange_rate"
				app:layout_constraintTop_toBottomOf="@+id/textView_exchange_rate"
				tools:text="1.00 CAD = 18.55 UAH" />

			<TextView
				android:id="@+id/textView_last_updated"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:text="@string/last_updated"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				android:visibility="gone"
				app:layout_constraintStart_toStartOf="@+id/textView_exchange_rate"
				app:layout_constraintTop_toBottomOf="@+id/textView_exchange_rate_value"
				tools:visibility="visible" />

			<TextView
				android:id="@+id/textView_last_updated_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				app:layout_constraintStart_toStartOf="@+id/textView_last_updated"
				app:layout_constraintTop_toBottomOf="@+id/textView_last_updated"
				tools:text="Just now" />

			<TextView
				android:id="@+id/textView_warning_error"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|end"
				android:layout_marginTop="32dp"
				android:drawableTop="@drawable/ic_warning"
				android:drawablePadding="8dp"
				android:textAlignment="center"
				android:textSize="24sp"
				android:visibility="gone"
				app:layout_constraintEnd_toEndOf="@+id/button_convert"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/textView_last_updated"
				app:layout_constraintTop_toBottomOf="@+id/textView_last_updated_value"
				tools:visibility="visible" />

			<Button
				android:id="@+id/button_retry"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="16dp"
				android:text="@string/retry"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="@+id/textView_warning_error"
				app:layout_constraintStart_toStartOf="@+id/textView_warning_error"
				app:layout_constraintTop_toBottomOf="@+id/textView_warning_error"
				tools:visibility="visible" />

			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.50" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>